--- a/src/Translation/locales/ar.json
+++ b/src/Translation/locales/ar.json
@@ -102,7 +102,7 @@
   "ID Proof": "إثبات الهوية",
   "Address": "العنوان",
   "Phone Number": "رقم الهاتف",
-  "Notarization": "التوثيق",
+  "Notarization": "اتفاقية",
   "Shares": "الأسهم",
   "Steps": "خطوات",
   "Bank Details": "تفاصيل البنك",
