--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -58,7 +58,7 @@
   "Active": "Active",
   "Inactive": "Inactive",
   "Go Back Home": "Go Back Home",
-  "Future Plan In": "Future Plan In",
+  "Future Plan In": "Future Plan",
   "Future Plan Out": "Future Plan Out",
   "Select Investment Mode": "Select Investment Mode",
   "Choose the mode of investment that suits your goals. Whether you want to invest broadly or select specific opportunities, we’ve got you covered": "Choose the mode of investment that suits your goals. Whether you want to invest broadly or select specific opportunities, we’ve got you covered",
@@ -99,7 +99,7 @@
   "ID Proof": "ID Proof",
   "Address": "Address",
   "Phone Number": "Phone Number",
-  "Notarization": "Notarization",
+  "Notarization": "Agreement",
   "Shares": "Shares",
   "Steps": "Steps",
   "Bank Details": "Bank Details",
